# cim-contextgraph

./: Cargo.toml  README.md  flake.nix
docs/: README.md  test-documentation.md  user-stories.md  user-story-relationships.md
examples/: benchmark_comparison.rs  graph_composition.rs  simple_benchmark.rs  workflow_graph_example.rs
scripts/: generate-test-docs.sh
src/: cid_dag.rs  composition.rs  context_graph.rs  context_graph_v2.rs  invariants.rs  lib.rs  morphisms.rs  types.rs  workflow_graph.rs
tests/: cid_dag_tests.rs  component_system_unit_tests.rs  comprehensive_contextgraph_tests.rs  context_graph_integration_tests.rs  context_graph_tests.rs  context_graph_v2_tests.rs  error_handling_unit_tests.rs  event_driven_unit_tests.rs  infrastructure_tests.rs  test_completion_summary.md  test_summary.md  unit_tests.rs  working_unit_tests.rs
tests/infrastructure/: event_driven_tests.rs  mod.rs  test_event_stream.rs  test_message_routing.rs  test_nats_connection.rs
