[package]
name = "cim-contextgraph"
version = "0.3.0"
edition = "2021"
authors = ["The Cowboy AI"]
description = "Fundamental graph abstractions for CIM - ContextGraph and ConceptGraph"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/alchemist"
keywords = ["graph", "context", "concept", "composition", "category-theory"]
categories = ["data-structures", "algorithms", "visualization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
petgraph = "0.6"
nalgebra = "0.33"                                       # For conceptual space geometry

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.6"
rand = "0.9"
async-nats = { version = "0.41", features = ["service"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3"

[[example]]
name = "graph_composition"
path = "examples/graph_composition.rs"
